welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:25: error: value vert is not a member of object java.awt.Color
	faireDiago(Color.vert)
                         ^